[DESIGN FEATURE]CSS academia[Hélder Abreu]

--- a/app/assets/stylesheets/academy/answers.css.scss
+++ b/app/assets/stylesheets/academy/answers.css.scss
@@ -4,4 +4,15 @@
 
 #user-avatar {
 	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#panel-answer {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#form_message {
+	height: 300px;
 }
