--- a/app/views/academy/answers/_answer.html.erb
+++ b/app/views/academy/answers/_answer.html.erb
@@ -7,7 +7,7 @@
       </div>
     </header>
 
-    <div class="panel-body">
+    <div class="panel-body" id="panel-answer">
       <div class="col-xs-2 col-md-2" id="user-avatar"><%##  Avatar do user que respondeu  ##%>
         <%=link_to image_tag(answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), answer.user %>
 
