--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -25,7 +25,7 @@
       </h3>
     </header>
 
-    <div class="panel-body">
+    <div class="panel-body" id="panel-question">
       <div class="col-xs-2 col-md-2" id="user-avatar"><%##  Avatar do user que fez a pergunta  ##%>
         <%=link_to image_tag(@academy_question.user.avatar.url(:medium),:width => "70%",:class => "img-circle") , @academy_question.user %>
         <%= @academy_question.user.name %>
