--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -6,60 +6,60 @@
 <%#  needed to load the new answers without the need to reload  %>
 <%# Verifica se existe uma melhor resposta %>
 <% if @best_answer != nil %>
-        <div class="col-lg-12">
-          <section class="panel panel-success">
-            <header class="panel-heading">
-              Melhor Reposta
-            </header>
-            <div class="panel-body">
-              <div class="pull-right">
-                <%##  botão verde com o lapis para editar a resposta  ##%>
-                <%= link_to '<i class="fa fa-pencil"></i>'.html_safe , edit_academy_answer_path(@best_answer), :class => "btn btn-primary btn-xs" if @best_answer.user.id == current_user.id %>
-                <%##  botão vermelho com o caixote para eliminar a resposta  ##%>
-                <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe , edit_academy_answer_path(@best_answer), :class => "btn btn-danger btn-xs" if @best_answer.user.id == current_user.id %>
-              </div>
+<div class="col-lg-12">
+  <section class="panel panel-success">
+    <header class="panel-heading">
+      Melhor Reposta
+    </header>
+    <div class="panel-body" id="panel-question">
+      <div class="pull-right">
+        <%##  botão verde com o lapis para editar a resposta  ##%>
+        <%= link_to '<i class="fa fa-pencil"></i>'.html_safe , edit_academy_answer_path(@best_answer), :class => "btn btn-primary btn-xs" if @best_answer.user.id == current_user.id %>
+        <%##  botão vermelho com o caixote para eliminar a resposta  ##%>
+        <%= link_to '<i class="fa fa-trash-o"></i>'.html_safe , edit_academy_answer_path(@best_answer), :class => "btn btn-danger btn-xs" if @best_answer.user.id == current_user.id %>
+      </div>
 
 
-              <div class="col-xs-2 col-md-2"><%##  Avatar do user que respondeu  ##%>
-                <%=link_to image_tag(@best_answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), @best_answer.user %>
-                <%= @best_answer.user.name %>
-              </div>
+      <div class="col-xs-2 col-md-2"><%##  Avatar do user que respondeu  ##%>
+        <%=link_to image_tag(@best_answer.user.avatar.url(:medium),:width => "70%",:class => "img-circle"), @best_answer.user %>
+        <%= @best_answer.user.name %>
+      </div>
 
-              <div class="col-xs-9 col-md-10 "><%##  texto da resposta  ##%>
-                <%= @best_answer.text.html_safe %>
+      <div class="col-xs-9 col-md-10 "><%##  texto da resposta  ##%>
+        <%= @best_answer.text.html_safe %>
 
-              </div>
-            </div>
-
-            <div class="panel-footer">
-            <%###  @best_answers votes  ###%>
-                  <%#  Verify if the user is logged or if is the @best_answer's owner %>
-                  <% if !user_signed_in? || current_user.id == @best_answer.user.id #if not logged or is the owner them cant vote %>
-
-                    <label class="label label-default" syle="font-size:10px">
-                      <%= @best_answer.up - @best_answer.down %>
-                    </label>
-
-                  <% else %>
-                    <%= vote = @best_answer.which_vote?( current_user ) %>
-                    <!-- Answer Helper-->
-
-                    <%= link_to '<i class="fa fa-thumbs-up  fa-2x '.html_safe + up_vote?( vote ) +'"></i>'.html_safe, academy_up_vote_path(:answer => @best_answer), :title => "Dá mais um ponto a esta resposta!!" %>
-                    <label class="label label-success" syle="font-size:10px"><%= @best_answer.up - @best_answer.down %></label>
-                    <%= link_to '<i class="fa fa-thumbs-o-down fa-2x '.html_safe + down_vote?( vote ) +'"></i>'.html_safe, academy_down_vote_path(:answer => @best_answer), :title => "Dá menos um ponto a esta resposta!!"  %>
-
-
-                  <% end %>
-            <%###  end of answers votes  ###%>
-
-                  <div class="pull-right">
-                        <abbr class="timeago" title="<%= @best_answer.created_at.getutc.iso8601 %>">
-                          <%= @best_answer.created_at.to_s %>
-                        </abbr>
-                    </div>
-          </div>
-      </section>
+      </div>
     </div>
+
+    <div class="panel-footer">
+      <%###  @best_answers votes  ###%>
+      <%#  Verify if the user is logged or if is the @best_answer's owner %>
+      <% if !user_signed_in? || current_user.id == @best_answer.user.id #if not logged or is the owner them cant vote %>
+
+      <label class="label label-default" syle="font-size:10px">
+        <%= @best_answer.up - @best_answer.down %>
+      </label>
+
+      <% else %>
+      <%= vote = @best_answer.which_vote?( current_user ) %>
+      <!-- Answer Helper-->
+
+      <%= link_to '<i class="fa fa-thumbs-up  fa-2x '.html_safe + up_vote?( vote ) +'"></i>'.html_safe, academy_up_vote_path(:answer => @best_answer), :title => "Dá mais um ponto a esta resposta!!" %>
+      <label class="label label-success" syle="font-size:10px"><%= @best_answer.up - @best_answer.down %></label>
+      <%= link_to '<i class="fa fa-thumbs-o-down fa-2x '.html_safe + down_vote?( vote ) +'"></i>'.html_safe, academy_down_vote_path(:answer => @best_answer), :title => "Dá menos um ponto a esta resposta!!"  %>
+
+
+      <% end %>
+      <%###  end of answers votes  ###%>
+
+      <div class="pull-right">
+        <abbr class="timeago" title="<%= @best_answer.created_at.getutc.iso8601 %>">
+          <%= @best_answer.created_at.to_s %>
+        </abbr>
+      </div>
+    </div>
+  </section>
+</div>
 <% end %>
 
 <%#  Display all the answers  %>
@@ -70,18 +70,18 @@
 <%#  if user is logged  %>
 <% if user_signed_in? %>
 <%#  show answer form  %>
-  <%= render "academy/answers/form", :question => @academy_question %>
+<%= render "academy/answers/form", :question => @academy_question %>
 <% else %>
 <%#  show indication to login or signup  %>
-  <div class="col-lg-12">
-    <section class="panel">
-      <header class="panel-heading">
-        <div class="" >
-          <p>Inicie sessão para poder responder: <%= link_to "Iniciar Sessão", new_user_session_path %> ou <%= link_to "Registar", new_user_registration_path %></p>
-        </div>
-      </header>
-    </section>
-  </div>
+<div class="col-lg-12">
+  <section class="panel">
+    <header class="panel-heading">
+      <div class="" >
+        <p>Inicie sessão para poder responder: <%= link_to "Iniciar Sessão", new_user_session_path %> ou <%= link_to "Registar", new_user_registration_path %></p>
+      </div>
+    </header>
+  </section>
+</div>
 <% end %>
 
 
