[DESIGN FEATURE]CSS - Academia[Hélder Abreu]

--- a/app/assets/stylesheets/academy/tutorials.css
+++ b/app/assets/stylesheets/academy/tutorials.css
@@ -34,6 +34,11 @@
 	color: #B8B8B8 !important;
 }
 
+#edit-tutorial {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
 #icon-color {
 	color: #B8B8B8;
 }
