--- a/app/views/academy/workshops/edit.html.erb
+++ b/app/views/academy/workshops/edit.html.erb
@@ -1,19 +1,20 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
     <a class="url" href="<%= academy_workshops_path %>"><i class="fa fa-tags"></i> Workshops</a>
-    <a class="url" href="<%= event_event_path(@academy_workshop.id) %>"> > <%= @academy_workshop.title %></a></li>
+    <a class="url" href="<%= event_event_path(@academy_workshop.id) %>"> > <%= @academy_workshop.title %></a>
+  </li>
   <div style="float:right">
     <% if user_signed_in? %>
-        <%= link_to 'Novo Workshop', new_academy_workshop_path,:class=> "url"%>
+        <%= link_to '<i class="fa fa-plus"></i>Novo Workshop'.html_safe, new_academy_workshop_path,:class=> "url", style:"float:right"%>
     <% end %>
   </div>
 </ol>
 
-<div class="panel">
-  <div class="panel-heading border-header">
+<div class="panel panel-default">
+  <div class="panel-heading">
     <h3 class="panel-title">Editar Workshop</h3>
   </div>
-  <div class="panel-body">
+  <div class="panel-body" id="edit-workshop">
 
     <%= render 'form' %>
 
