--- a/app/views/academy/tutorials/_form.html.erb
+++ b/app/views/academy/tutorials/_form.html.erb
@@ -7,10 +7,10 @@
           <h3 class="panel-title">Novo Tutorial</h3>
       <% end %>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" id="edit-tutorial">
 
-      <div class="control-group">
-        <label class="control-label"> Categoria:</label>
+      <div class="control-group" style="margin-top:10px;">
+        <label class="control-label"> Categoria</label>
         <div class="controls">
           <%= f.collection_select(:category_id,@categories,:id,:name, :include_blank => 'Escolha uma categoria') unless @categories.blank? %>
         </div>
@@ -36,6 +36,7 @@
     <%= f.hidden_field :aproved %>
 
       <div class="control-group">
+        <%= f.label :rapid_description, "Processo" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_tutorial_rapid_description"></label>
         <div class="controls">
           <%= f.text_area :text,id:"text_tutorial",:placeholder => "Especifique todo o processo aqui...",:rows => "10",:id => "some-textarea",:class=>"form-control", :rel=>"tooltip",:title=>"Escreva de forma clara e não utilize demasiada pontuação ou termos repetidos." %>
         </div>
