--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5214,6 +5214,10 @@ a.thumbnail:focus {
   margin-top: 15px;
 }
 
+.media:hover{
+    background-color: lightgrey;
+}
+
 .media:first-child {
   margin-top: 0;
 }
