--- a/app/views/layouts/_sidebar_left_ads.erb
+++ b/app/views/layouts/_sidebar_left_ads.erb
@@ -1,54 +1,47 @@
 <%= form_tag ads_path ,:method => :get do%>
-
-    <!-- Split button Categoria -->
-    <div class="btn-group" style="width: 100%; margin-bottom: 2px" >
-      <button type="button" class="btn btn-sm" style="width: 80%;text-align: left">Categoria</button>
-      <button type="button" class="btn btn-sm dropdown-toggle" style="width: 20%" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Categoria</span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <% @categories.each do |cat| %>
-            <li>
-              <% if !params[:search].nil? %>
-                  <% if params[:search].include?("cat:" + "#{cat.id}") %>
-                      <%= check_box_tag "search[]","cat:#{cat.id}", "active" %>
-                  <%else%>
-                      <%= check_box_tag "search[]","cat:#{cat.id}" %>
-                  <% end %>
-              <% else %>
-                  <%= check_box_tag "search[]","cat:#{cat.id}" %>
+  <section class="panel">
+      <header class="panel-heading">
+          Category
+      </header>
+      <div class="panel-body">
+          <ul class="nav prod-cat">
+               <% @categories.each do |cat| %>
+                  <li>
+                    <i class=" fa fa-angle-right"></i>
+                    <% if !params[:search].nil? %>
+                        <% if params[:search].include?("cat:" + "#{cat.id}") %>
+                            <%= check_box_tag "search[]","cat:#{cat.id}", "active" %>
+                        <%else%>
+                            <%= check_box_tag "search[]","cat:#{cat.id}" %>
+                        <% end %>
+                    <% else %>
+                        <%= check_box_tag "search[]","cat:#{cat.id}" %>
+                    <% end %>
+                    <%= cat.name %>
+                  </li>
               <% end %>
-              <%= cat.name %>
-            </li>
-        <% end %>
-      </ul>
+          </ul>
+      </div>
+
+    <header class="panel-heading border-header">
+      Category
+    </header>
+
+    <div class="panel-body">
+    <select multiple name="cities[]" class="col-xs-12 col-md-13 col-lg-13" placeholder="sel. cidades">
+    <option value="">Selecione...</option>
+    <% @districts.each do |district| %>
+      <% !params[:cities].blank? ? (cities = params[:cities]) : (cities = [])%>
+      <optgroup label="<%= district.name %>">
+           <% district.cities.each do |city| %>
+
+                 <option value="<%= city.id %>" <%= 'selected' if cities.include?(city.id.to_s) %> ><%= city.city %></option>
+           <% end %>
+      </optgroup>
+    <% end %>
+    </select>
     </div>
-
-     <div class="btn-group" style="width: 100%; margin-bottom: 2px">
-      <button type="button" class="btn btn-sm" style="width: 80%;text-align: left">Cidade</button>
-      <button type="button" class="btn btn-sm dropdown-toggle" style="width: 20%" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Cidade</span>
-      </button>
-    </div>
-    <select multiple name="cities[]" class="col-xs-12 col-md-12 col-lg-12" placeholder="Seleccione as cidades">
-              <option value="">Selecione...</option>
-              <% @districts.each do |district| %>
-                <% !params[:cities].blank? ? (cities = params[:cities]) : (cities = [])%>
-                <optgroup label="<%= district.name %>">
-                     <% district.cities.each do |city| %>
-
-                           <option value="<%= city.id %>" <%= 'selected' if cities.include?(city.id.to_s) %> ><%= city.city %></option>
-                     <% end %>
-                </optgroup>
-              <% end %>
-      </select>
-      <br><br>
-
+  </section>
      
-
-   
-
-    <%= submit_tag "Filtrar",class:"btn btn-default btn-sm",style:"width:100%" %>
+  <%= submit_tag "Filtrar",class:"btn btn-default btn-sm",style:"width:100%" %>
 <% end %>
