--- a/app/views/event/events/index.html.erb
+++ b/app/views/event/events/index.html.erb
@@ -25,9 +25,9 @@
                 <div style="float:right">
                 <% if user_signed_in? && current_user.id == event_event.user_id %>
                     <div class="ui-group-buttons">
-                      <%= link_to '<i class="fa  fa-edit"></i>'.html_safe, edit_event_event_path(@event_event),:class=>"btn btn-info btn-xs", :tile=> "Editar Evento" %>
+                      <%= link_to '<i class="fa  fa-edit"></i>'.html_safe, edit_event_event_path(event_event),:class=>"btn btn-info btn-xs", :tile=> "Editar Evento" %>
                       <div class="or or-xs"></div>
-                      <%= link_to '<i class="fa fa fa-trash-o"></i>'.html_safe, @event_event, method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu evento ?' } ,:class=>"btn btn-danger btn-xs", :tile=> "Apagar Evento"%>
+                      <%= link_to '<i class="fa fa fa-trash-o"></i>'.html_safe, event_event, method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu evento ?' } ,:class=>"btn btn-danger btn-xs", :tile=> "Apagar Evento"%>
                     </div>
                 <% end %>
                   </div>
