--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -20,12 +20,12 @@
 		<% end %>
 </table>
 <% else %>
-	<h3 align="center">Não existem rating's por atribuir</h3><h2 align="center" style="color:red">QUERES UM PRÉMIO?</h2>
+	<center><h3>Não existem avaliações por atribuir</h3></center>
 <% end %>
 
 <div class="container">
 	<div class="row">
-		<h2>My Rate <%= @myrate.to_f %></h2>
+		<h2>A minha avaliação <%= @myrate.to_f %></h2>
 	</div>
     <div class="row lead">
         <% (1..(@myrate.to_i)).each do |i| %>
