--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,8 +13,16 @@
       <%= f.submit "Recuperar password",class: "btn btn-lg btn-primary btn-block" %>
 
         <% if @user.errors.any? %>
-            <%= render "layouts/error_message" %>
-        <% end %>
+          <div id="error_explanation">
+            <h2>Foi encontrado <%= pluralize(@user.errors.count, " ") %>erro:</h2>
+
+            <ul>
+              <% @user.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
+      <% end %>
 
     <% end %>
     <div class="left-section">
