--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -76,19 +76,23 @@
         <div class="panel panel-primary">
             <div class="panel-heading"> Mudar a password e Avatar</div>
             <div class="panel-body">
+                <div class="row" >
                 <div class="form-group">
                     <label class="col-lg-2 control-label">Nova Password</label>
                     <div class="col-lg-6">
                         <%= f.password_field :password, :autocomplete => "off" ,:class=>"form-control",:id=>"n-pwd",:placeholder=>" " %>
                     </div>
                 </div>
+                </div>
+                <div class="row" >
                 <div class="form-group">
                     <label class="col-lg-2 control-label">Rescreva Nova Password</label>
                     <div class="col-lg-6">
                          <%= f.password_field :password_confirmation ,:class=>"form-control",:id=>"rt-pwd",:placeholder=>" " %>
                     </div>
                 </div>
-
+                </div>
+                <div class="row" >
 
                 <div class="form-group">
                     <label class="col-lg-2 control-label">Alterar Avatar</label>
@@ -96,6 +100,9 @@
                         <%= f.file_field :avatar ,:class=>"form-control file-pos"%>
                     </div>
                 </div>
+                </div>
+                
+                
             </div>
         </div>
 
