--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -32,11 +32,7 @@
   </button>
   <div class="actions" style="float:right">
     <div class="actions" style="float:right">
-      <% if controller.action_name != "edit" %>
-          <%= f.submit "Responder", :class => "btn btn-info" %>
-      <% else %>
-          <%= f.submit "Editar", :class => "btn btn-info" %>
-      <% end %>
+          <%= f.submit "Publicar", :class => "btn btn-info" %>
     </div>
   </div>
 </div>
