--- a/app/views/academy/tutorials/_form.html.erb
+++ b/app/views/academy/tutorials/_form.html.erb
@@ -19,7 +19,7 @@
       <div class="control-group">
         <%= f.label :title, "Título",:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_tutorial_title"></label>
         <div class="controls">
-          <%= f.text_field :title,:placeholder => "Defina o título do tutorial" ,:class=>"form-control",:rel=>"tooltip",:title=>"Escolha um titulo apropriado.
+          <%= f.text_field :title,:placeholder => "Título do tutorial..." ,:class=>"form-control",:rel=>"tooltip",:title=>"Escolha um titulo apropriado.
          Seja claro e sucinto." %>
         </div>
       </div>
