--- a/app/views/academy/questions/show.html.erb
+++ b/app/views/academy/questions/show.html.erb
@@ -76,7 +76,7 @@
 <div class="col-lg-12">
   <section class="panel">
     <header class="panel-heading">
-      <div class="" >
+      <div>
         <p>Inicie sessão para poder responder: <%= link_to "Iniciar Sessão", new_user_session_path %> ou <%= link_to "Registar", new_user_registration_path %></p>
       </div>
     </header>
