--- a/app/views/users/myevents.html.erb
+++ b/app/views/users/myevents.html.erb
@@ -15,35 +15,41 @@
 <%= will_paginate(@my_events, renderer: BootstrapPagination::Rails, :previous_label => 'Anterior', :next_label => 'Seguinte') %>
 <div class="row" style="margin-right:0px">
   <% @my_events.each do |event_event| %>
-  <div class="col-md-6">
+  <div class="event-box"><!--class="col-md-6">-->
     <div class="well well-sm">
-
-      <div class="col-xs-3 col-md-3 text-center">
-        <%= link_to event_image( event_event.image ), event_event ,:class=>"img-rounded img-responsive" %>
+      <div class="col-xs-3 col-md-3 text-center" id="event-image">
+        <%= link_to event_image( event_event.image ), event_event %>
       </div>
 
       <div class="row">
-
-        <%  if !event_event.is_aproved? %>
-        <span class="label label-warning" style="float:right">Não aprovado</span>
-        <% end %>
-
         <div class="col-xs-9 col-md-9 section-box">
-          <!--VErifica se esta aprovado -->
-          <br>
-          <%= link_to event_event.title, event_event, class:"h2 url" %>
-          <br>
-          <p><%= event_event.description %></p>
-          <br>
+          <div style="float:right">
+            <%= link_to '<i class="fa fa-edit"></i>Editar '.html_safe, edit_event_event_path(event_event), class:'no-effect', :tile=> "Editar Evento" %>
+            <%= link_to '<i class="fa fa-trash-o"></i>Eliminar '.html_safe, event_event, class:'no-effect', method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu evento?' } ,:tile=> "Apagar Evento"%>
+          </div>
+
+          <div id="title-approval">
+            <%= link_to event_event.title, event_event, class:"h2 url" %>
+            <% if !event_event.is_aproved? %>
+              <span class="label label-warning">Não aprovado</span>
+            <% end %>
+          </div>
+
+          <div id="event-description">
+            <p><%= event_event.description %></p>
+          </div>
+          
           <hr>
+
           <div class="row rating-desc">
             <div class="col-md-12">
-              <div style="float:left">
-                <span class="fa fa-calendar" style="color:darkgreen;"></span><%=event_event.start_day.day %>/<%=event_event.start_day.mon %>/<%=event_event.start_day.year %>
-              </div>
               <div style="float:right">
-                <span class="fa fa-calendar" style="color:#d43f3a"></span><%=event_event.end_day.day %>/<%=event_event.end_day.mon %>/<%=event_event.end_day.year %>
-
+                <span class="event-begin">
+                  <span class="fa fa-calendar" style="color:darkgreen;"></span><%=event_event.start_day.day %>/<%=event_event.start_day.mon %>/<%=event_event.start_day.year %>
+                </span>
+                <span>
+                  <span class="fa fa-calendar" style="color:#d43f3a"></span><%=event_event.end_day.day %>/<%=event_event.end_day.mon %>/<%=event_event.end_day.year %>
+                </span>
               </div>
             </div>
           </div>
