--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -94,10 +94,10 @@
           <!-- Controls -->
           <% if num_img > 1 %>
             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="fa fa-angle-left" id="faAngle"></span>
             </a>
             <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="fa fa-angle-right" id="faAngle"></span>
             </a>
           <% end %>
         </div>
