[Updated Feature] workshop

--- a/app/views/academy/workshops/_form.html.erb
+++ b/app/views/academy/workshops/_form.html.erb
@@ -73,7 +73,7 @@
     <div class="control-group">
       <%= f.label :local, "Localização do Workshop" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="addresspicker_map"></label>
       <div class="controls">
-        <%= f.text_field :local,:placeholder =>"Localização da venda..." ,:class=>"form-control", :id=>"addresspicker_map",autocomplete: "off"%>
+        <%= f.text_field :local,:placeholder =>"Localização do workshop..." ,:class=>"form-control", :id=>"addresspicker_map",autocomplete: "off"%>
       </div>
 
       <div style="width:100%;height:350px;margin-top:20px">
