footer fixed to bottom

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -138,7 +138,7 @@ footer {
   padding-top:10px;
   background-color: #00A75D;
   bottom: 0;
-  position: relative;
+  position: fixed;
   width: 100%;
   color: #fff;
   padding-left: 200px;
