--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -78,6 +78,10 @@
              <%= link_to "<i class='fa fa-users'></i> Utilizadores".html_safe  , admin_users_path %>
            </li>
 
+           <li> 
+             <%= link_to "<i class='fa fa-square'></i> Workshops".html_safe  , admin_academy_workshops_path %>
+           </li>
+
 
          <hr>
 
